--- a/src/apps/web/pomodoro_client/package.json
+++ b/src/apps/web/pomodoro_client/package.json
@@ -6,10 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "typecheck": "tsc --noEmit",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.54.0",
+    "vite": "^7.2.4",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
