--- a/src/apps/web/pomodoro_client/tsconfig.json
+++ b/src/apps/web/pomodoro_client/tsconfig.json
@@ -16,11 +16,13 @@
 
     /* Linting */
     "strict": true,
+    "noEmitOnError": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "noImplicitAny": true,
   },
   "include": ["src"]
 }
