--- a/src/apps/web/pomodoro_client/package.json
+++ b/src/apps/web/pomodoro_client/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
+    "sass": "^1.97.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.2.4",
