--- a/src/apps/web/pomodoro_client/package.json
+++ b/src/apps/web/pomodoro_client/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
